[package]
name = "bip39-derivation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip39 = { version = "2.0.0", features = ["rand"] }
derivation-path = "0.2.0"
hdpath = "0.6.3"
slip10 = "0.4.3"
solana-sdk = { version = "2.0.9", features = ["curve25519-dalek"] }
tiny-hderive = "0.3.0"
